--- a/jrtr/.project
+++ b/jrtr/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CG-Serie2-jrtr</name>
+	<name>CG-jrtr</name>
 	<comment></comment>
 	<projects>
 	</projects>
